compiler/tests/fa/errors/uchar_multi.salam
// انتظار: codepoint
// زبان: فارسی
تابع اصلی:
    x : یونیکد = u"AB"
    چاپ x
پایان
